Added ability to create a username
Still need to break this out into it's own component.  Still need to work on the API to send back better responses on failure, and success...

--- a/Pet-Pickup/src/app/login/login.component.html
+++ b/Pet-Pickup/src/app/login/login.component.html
@@ -22,7 +22,7 @@
         <br>
 
         <button
-          (click)="onLogIn(loginForm)"
+          (click)="onSignUp(loginForm)"
           [routerLink]="['/dashboard']"
           mat-raised-button
           color="primary"
