login route works
login route is working.

--- a/Pet-Pickup/src/app/login/login.component.html
+++ b/Pet-Pickup/src/app/login/login.component.html
@@ -24,7 +24,7 @@
         <br>
 
         <button
-          (click)="onSignUp(loginForm)"
+          (click)="onLogIn(loginForm)"
           [routerLink]="['/dashboard']"
           mat-raised-button
           color="primary"
