--- a/Pet-Pickup/src/app/dashboard/dashboard.component.css
+++ b/Pet-Pickup/src/app/dashboard/dashboard.component.css
@@ -9,3 +9,16 @@ mat-spinner {
   margin: auto;
 
 }
+
+td {
+  line-height: 40px;
+}
+
+.disabled {
+  pointer-events: none;
+  cursor: not-allowed;
+}
+
+li {
+  cursor: pointer;
+}
