--- a/Pet-Pickup/src/app/header/header.component.html
+++ b/Pet-Pickup/src/app/header/header.component.html
@@ -10,6 +10,11 @@
         New Case
       </button>
     </div>
+    <div>
+      <div class="pl-4">
+          <app-search *ngIf="userIsAuthenticated"></app-search>
+      </div>
+    </div>
     <span class="push-right"></span>
     <button
       *ngIf="userIsAuthenticated"
