Case form opens
Case form now opens when you select a case either from the search bar, or from the dashboard. Also added the ability to update cases, and push that data to the db.

--- a/Pet-Pickup/src/app/dashboard/dashboard.component.html
+++ b/Pet-Pickup/src/app/dashboard/dashboard.component.html
@@ -39,7 +39,7 @@
         </form>
       </div>
 
-      <table *ngIf="!isLoading" class="table table-sm">
+      <table *ngIf="!isLoading" class="table table-hover table-sm">
         <thead class="">
           <tr>
             <th scope="col" *ngFor="let col of columnsToDisplay" [ngClass]="columnsToHide.includes(col) ? 'd-none d-md-table-cell' : ''">
@@ -48,16 +48,16 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let case of petCases; let i = index">
-            <td class="d-none d-md-table-cell">{{ petCases[i].person.id }}</td>
-            <td>{{ petCases[i].person.firstname }} {{ petCases[i].person.last }}</td>
-            <td>{{ petCases[i].pet.petname }}</td>
-            <td class="d-none d-md-table-cell">{{ petCases[i].pet.sex }}</td>
-            <td class="d-none d-md-table-cell">{{ petCases[i].pet.petweight }}</td>
-            <td class="d-none d-md-table-cell">{{ petCases[i].cremationDetails.crematory }}</td>
-            <td class="d-none d-md-table-cell">{{ petCases[i].pet.pettype }}</td>
-            <td class="d-none d-md-table-cell">{{ petCases[i].cremationDetails.clinic }}</td>
-            <td>{{ petCases[i].cremationDetails.status }}</td>
+          <tr (click)="loadCase($event)" *ngFor="let case of petCases; let i = index">
+            <td [id]="petCases[i].person.id" class="d-none d-md-table-cell">{{ petCases[i].person.id }}</td>
+            <td [id]="petCases[i].person.id">{{ petCases[i].person.firstname }} {{ petCases[i].person.last }}</td>
+            <td [id]="petCases[i].person.id">{{ petCases[i].pet.petname }}</td>
+            <td [id]="petCases[i].person.id" class="d-none d-md-table-cell">{{ petCases[i].pet.sex }}</td>
+            <td [id]="petCases[i].person.id" class="d-none d-md-table-cell">{{ petCases[i].pet.petweight }}</td>
+            <td [id]="petCases[i].person.id" class="d-none d-md-table-cell">{{ petCases[i].cremationDetails.crematory }}</td>
+            <td [id]="petCases[i].person.id" class="d-none d-md-table-cell">{{ petCases[i].pet.pettype }}</td>
+            <td [id]="petCases[i].person.id" class="d-none d-md-table-cell">{{ petCases[i].cremationDetails.clinic }}</td>
+            <td [id]="petCases[i].person.id">{{ petCases[i].cremationDetails.status }}</td>
           </tr>
         </tbody>
       </table>
