--- a/Pet-Pickup/src/app/header/header.component.html
+++ b/Pet-Pickup/src/app/header/header.component.html
@@ -22,7 +22,7 @@
       [disableRipple]="true"
       [matMenuTriggerFor]="menu">
       <i class="fa fa-user-circle fa-xs text-white"></i>
-      <span class="text-white" style="padding: 5px;">LoggedInUser</span>
+      <span class="text-white" style="padding: 5px;">{{ username }}</span>
       <i class="fa fa-angle-down text-white"></i>
     </button>
     <mat-menu #menu="matMenu">
