--- a/Pet-Pickup/src/app/dashboard/dashboard.component.html
+++ b/Pet-Pickup/src/app/dashboard/dashboard.component.html
@@ -10,7 +10,7 @@
           <mat-form-field class="col-md-12">
             <mat-select
               [(value)]="filter"
-              (selectionChange)="getCases()"
+              (selectionChange)="getCases(true)"
               placeholder="Vet Clinic"
             >
               <mat-option value="">All Clinics</mat-option>
