--- a/Pet-Pickup/src/app/search-table/search-table.component.html
+++ b/Pet-Pickup/src/app/search-table/search-table.component.html
@@ -4,22 +4,7 @@
       <h3 class=" align-self-center">SEARCH RESULTS</h3>
     </div>
     <mat-card class="ml-3 mr-3">
-      <div class="row">
-        <form class="col-md-12">
-          <div class="d-flex justify-content-end col-md-12">
-            <div class="d-flex align-items-center">Show</div>
-            <mat-form-field class="col-md-1">
-              <mat-select>
-                <mat-option value="1">1</mat-option>
-                <mat-option value="5">5</mat-option>
-                <mat-option value="10">10</mat-option>
-              </mat-select>
-            </mat-form-field>
-            <div class="d-flex align-items-center">entries</div>
-          </div>
-        </form>
-      </div>
-
+      <cdk-virtual-scroll-viewport itemSize="50" minBufferPx="200" maxBufferPx="400">
       <table class="table table-hover table-sm">
         <thead class="">
           <tr>
@@ -29,7 +14,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr (click)="loadCase($event)" *ngFor="let result of searchResults; let i = index;">
+          <tr (click)="loadCase($event)" *cdkVirtualFor="let result of searchResults; let i = index;">
             <td [id]="searchResults[i].person.id" class="d-none d-md-table-cell">{{ searchResults[i].person.id }}</td>
             <td [id]="searchResults[i].person.id" class="d-none d-md-table-cell">{{ searchResults[i].pet.petname }}</td>
             <td [id]="searchResults[i].person.id" class="d-none d-md-table-cell">{{ searchResults[i].pet.petdod | date }}</td>
@@ -38,6 +23,7 @@
           </tr>
         </tbody>
       </table>
+    </cdk-virtual-scroll-viewport>
     </mat-card>
   </div>
 </div>
