--- a/Pet-Pickup/src/app/header/new-case-dialog.html
+++ b/Pet-Pickup/src/app/header/new-case-dialog.html
@@ -45,6 +45,7 @@
             name="firstname"
             formControlName="firstname"
             matInput
+            required
             placeholder="First Name">
         </mat-form-field>
         <mat-form-field class="col-md-3">
@@ -61,6 +62,7 @@
             name="last"
             formControlName="last"
             matInput
+            required
             placeholder="Last Name">
         </mat-form-field>
         <mat-form-field class="col-md-1">
@@ -81,6 +83,7 @@
             id="address"
             name="address"
             matInput
+            required
             formControlName="address"
             placeholder="Address"
             type="text">
@@ -89,6 +92,7 @@
           <input
             id="city"
             name="city"
+            required
             matInput
             formControlName="city"
             placeholder="City"
@@ -99,6 +103,7 @@
             placeholder="State"
             id="state"
             name="state"
+            required
             formControlName="state">
             <mat-option value=""></mat-option>
             <mat-option *ngFor="let state of states" [value]="state">{{ state }}</mat-option>
@@ -109,6 +114,7 @@
             id="zip"
             name="zip"
             matInput
+            required
             placeholder="Zip"
             formControlName="zip"
             type="text">
@@ -131,6 +137,7 @@
             name="home"
             formControlName="home"
             matInput
+            required
             placeholder="Home Phone"
             type="phone">
         </mat-form-field>
@@ -158,7 +165,7 @@
           name="ownerTab"
           class="d-none d-md-flex btn btn-primary"
           type="button"
-          (click)="toggleShowPet($event)">
+          (click)="validateForm($event); toggleShowPet($event);">
           Next
         </button>
       </div>
@@ -171,6 +178,7 @@
           <input
             id="petname"
             name="petname"
+            required
             formControlName="petname"
             matInput
             placeholder="Pet Name">
@@ -191,6 +199,7 @@
           <input
             id="pettype"
             name="pettype"
+            required
             formControlName="pettype"
             matInput
             placeholder="Pet Type"
@@ -278,7 +287,7 @@
           class="d-none d-md-flex btn btn-primary"
           type="button"
           name="petTab"
-          (click)="toggleShowDetails($event)">
+          (click)="validateForm($event); toggleShowDetails($event)">
           Next
         </button>
       </div>
@@ -290,6 +299,7 @@
         <mat-form-field class="col-md-6">
           <mat-select
             placeholder="Crematory"
+            required
             id="crematory"
             name="crematory"
             formControlName="crematory">
@@ -303,6 +313,7 @@
             placeholder="Status"
             id="status"
             name="status"
+            required
             formControlName="status">
             <mat-option value=""></mat-option>
             <mat-option value="Pending Cremation">Pending Cremation</mat-option>
@@ -317,6 +328,7 @@
             placeholder="Cremation Type"
             id="cremationtype"
             name="cremationtype"
+            required
             formControlName="cremationtype">
             <mat-option value=""></mat-option>
             <mat-option value="Private">Private</mat-option>
@@ -329,6 +341,7 @@
             placeholder="Vet Clinic"
             id="vetclinic"
             name="vetclinic"
+            required
             formControlName="vetclinic">
             <mat-option value=""></mat-option>
             <mat-option value="Number One Vet Clinic">Number one Vet Clinic</mat-option>
@@ -439,7 +452,7 @@
         </mat-form-field>
       </div>
       <div class="row d-flex justify-content-end">
-        <button (click)="closeDialog()" class="btn btn-primary mr-3" type="submit" mat-button>Save</button>
+        <button class="btn btn-primary mr-3" type="submit" mat-button>Save</button>
       </div>
     </div>
   </form>
